--- a/index.html
+++ b/index.html
@@ -1,137 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="author"      content="Sergey Pozhilov (GetTemplate.com)">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="author" content="Sergey Pozhilov (GetTemplate.com)">
 
-	<title>Econ Wiki</title>
+  <title>Econ Wiki</title>
 
-	<link rel="shortcut icon" href="assets/images/gt_favicon.png">
+  <link rel="shortcut icon" href="assets/images/gt_favicon.png">
 
-	<!-- Bootstrap itself -->
-	<link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
+  <script src="https://angular-ui.github.io/ui-router/release/angular-ui-router.js"></script>
 
-	<!-- Custom styles -->
-	<link rel="stylesheet" href="assets/css/magister.css">
+  <!-- Bootstrap itself -->
+  <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
-	<!-- Fonts -->
-	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-	<link href='http://fonts.googleapis.com/css?family=Wire+One' rel='stylesheet' type='text/css'>
+  <!-- Custom styles -->
+  <link rel="stylesheet" href="assets/css/magister.css">
+
+  <!-- Fonts -->
+  <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href='http://fonts.googleapis.com/css?family=Wire+One' rel='stylesheet' type='text/css'>
 </head>
 
 <!-- use "theme-invert" class on bright backgrounds, also try "text-shadows" class -->
+
 <body class="theme-invert">
 
-<nav class="mainmenu">
-	<div class="container">
-		<div class="dropdown">
-			<button type="button" class="navbar-toggle" data-toggle="dropdown"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-			<!-- <a data-toggle="dropdown" href="#">Dropdown trigger</a> -->
-			<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-				<li><a href="#head" class="active">Home</a></li>
-				<li><a href="#about">Forum</a></li>
-				<li><a href="#themes">Lessons</a></li>
-				<li><a href="#contact">Projects</a></li>
-			</ul>
-		</div>
-	</div>
-</nav>
+  <nav class="mainmenu">
+    <div class="container">
+      <div class="dropdown">
+        <button type="button" class="navbar-toggle" data-toggle="dropdown"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+        <!-- <a data-toggle="dropdown" href="#">Dropdown trigger</a> -->
+        <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+          <li><a href="#head" class="active">Home</a></li>
+          <li><a href="#forum">Forum</a></li>
+          <li><a href="#themes">Lessons</a></li>
+          <li><a href="#contact">Projects</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
 
-<!-- Main (Home) section -->
-<section class="section" id="head">
-	<div class="container">
+  <!-- Main (Home) section -->
+  <section class="section" id="head">
+    <div class="container">
 
-		<div class="row">
-			<div class="col-md-10 col-lg-10 col-md-offset-1 col-lg-offset-1 text-center">
+      <div class="row">
+        <div class="col-md-10 col-lg-10 col-md-offset-1 col-lg-offset-1 text-center">
 
-				<!-- Site Title, your name, HELLO msg, etc. -->
-				<h1 class="title">Econ Wiki</h1>
-				<h2 class="subtitle">Learn Python!</h2>
+          <!-- Site Title, your name, HELLO msg, etc. -->
+          <h1 class="title">Econ Wiki</h1>
+          <h2 class="subtitle">Learn Python!</h2>
 
-				<!-- Short introductory (optional) -->
-				<h3 class="tagline">
+          <!-- Short introductory (optional) -->
+          <h3 class="tagline">
 					Welcome to the Econ Wiki/Forum<br>
 
 				</h3>
 
-				<!-- Nice place to describe your site in a sentence or two -->
-				<p><a href="#themes" class="btn btn-default btn-lg">Start Lessons</a></p>
+          <!-- Nice place to describe your site in a sentence or two -->
+          <p><a href="#themes" class="btn btn-default btn-lg">Start Lessons</a></p>
 
-			</div> <!-- /col -->
-		</div> <!-- /row -->
+        </div>
+        <!-- /col -->
+      </div>
+      <!-- /row -->
 
-	</div>
-</section>
+    </div>
+  </section>
 
-<!-- Second (About) section -->
-<section class="section" id="about">
-	<div class="container">
+  <!-- Second (Forum) section -->
+  <section class="section" id="forum">
 
-		<h2 class="text-center title"></h2>
-		<div class="row">
-			<div class="col-sm-4 col-sm-offset-2">
-				<h5><strong><br></strong></h5>
-				<p></p>
-			</div>
-			<div class="col-sm-4">
-				<p></p>
-
-			</div>
-		</div>
-	</div>
-</section>
-
-<!-- Third (Works) section -->
-<section class="section" id="themes">
-	<div class="container">
-	
-		<h2 class="text-center title"></h2>
-		<p class="lead text-center">
-			<br>
-		</p>
-		<div class="row">
-			<div class="col-sm-4 col-sm-offset-2">
-
-			</div>
-			<div class="col-sm-4">
-
-			</div>
-			<div class="col-sm-4 col-sm-offset-2">
-			</div>
-			<div class="col-sm-4">
-
-				</div>
-			</div>
-
-		</div>
-
-	</div>
-</section>
-
-<!-- Fourth (Contact) section -->
-<section class="section" id="contact">
-	<div class="container">
+    <div class='col-sm-10 text-center'>
+      <div id='search'>
+        Search
+        <input type="text" id="partial" ng-keyup="searchForum()"></input>
 
 
-		<div class="row">
-			<div class="col-sm-8 col-sm-offset-2 text-center">
-				<p class="lead"></p>
-				</ul>
-			</div>
-		</div>
+        <form ng-submit="addPost()" style="margin-top30px;">
 
-	</div>
-</section>
+          <div>
+            <input type="text" ng-model="formTitle"></input>
+          </div>
+
+          <div>
+            <input type="text" ng-model="formContent"></input>
+          </div>
+          <button type="submit">Post</button>
+        </form>
+
+        <div ng-repeat="post in posts">
+          <a href="#/posts/{{posts.indexOf(post).title}}">{{post.title}}</a>
+        </div>
+
+      </div>
 
 
-<!-- Load js libs only when the page is loaded. -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-<script src="assets/js/modernizr.custom.72241.js"></script>
-<!-- Custom template scripts -->
-<script src="assets/js/magister.js"></script>
+
+    </div>
+
+  </section>
+
+  <!-- Third (Works) section -->
+  <section class="section" id="themes">
+    <div class="container">
+
+      <h2 class="text-center title"></h2>
+      <p class="lead text-center">
+        <br>
+      </p>
+      <div class="row">
+        <div class="col-sm-4 col-sm-offset-2">
+
+        </div>
+        <div class="col-sm-4">
+
+        </div>
+        <div class="col-sm-4 col-sm-offset-2">
+        </div>
+        <div class="col-sm-4">
+
+        </div>
+      </div>
+
+    </div>
+
+    </div>
+  </section>
+
+  <!-- Fourth (Contact) section -->
+  <section class="section" id="contact">
+    <div class="container">
+
+
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2 text-center">
+          <p class="lead"></p>
+          </ul>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+
+  <!-- Load js libs only when the page is loaded. -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+  <script src="assets/js/modernizr.custom.72241.js"></script>
+  <!-- Custom template scripts -->
+  <script src="assets/js/magister.js"></script>
 </body>
+
 </html>
