--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
 
           <!-- Short introductory (optional) -->
           <h3 class="tagline">
-					Welcome to the Econ Wiki/Forum<br>
-
-				</h3>
+	Welcome to the Econ Wiki/Forum<br>
+	</h3>
 
           <!-- Nice place to describe your site in a sentence or two -->
           <p><a href="#themes" class="btn btn-default btn-lg">Start Lessons</a></p>
@@ -80,33 +79,46 @@
 
   </section>
     <script type="text/ng-template" id="/forum.html">
-      <div class='col-sm-10 text-center'>
-        <div id='search'>
-          <!-- Search
+      
+
+         <!--<div id='search'>
+           Search
           <input type="text" id="partial" ng-keyup="searchForum($event)"></input> -->
           <form ng-submit="addPost()" style="margin-top30px;">
-            <div>
-              <input type="text" ng-model="formTitle"></input>
+            <div class='col-sm-1 text-center'>
+            <button type="submit">Post</button></br>
+                   </div>
+            <div class = 'col-sm-1 text-center'>
+              <textarea ng-model="formTitle" rows="1" cols="60"   ></textarea>
+              <textarea ng-model="formContent" rows="10" cols="90"  ></textarea>
             </div>
-            <div>
-              <input type="text" ng-model="formContent"></input>
-            </div>
-            <button type="submit">Post</button>
           </form>
+          </br>
+          </br>
+          </br>
+          </br>
+          </br>
+          </br>
+          </br>
+          </br>
+          </br>
+          </br>
+          </br>
+          </br>
+          </br>
+    
+          <div class = 'col-sm-1 row-sm-8 text-center'>
           <div ng-repeat="post in posts">
             <a href="#/posts/{{posts.indexOf(post)}}">{{post.title}}</a>
           </div>
-        </div>
-      </div>
+          </div>
+      </div>  
     </script>
-		<script>
-
-		</script>
 
     <script type="text/ng-template" id="/posts.html">
       <div class="page-header">
         <h3>
-	          {{post.title}}
+	          {{post.content}}
 	      </h3>
       </div>
       <div ng-repeat="comment in post.comments">
